[package]
name = "os"
version = "0.1.0"
authors = ["Yifan Wu <shinbokuow@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
riscv = { path = "../riscv", features = ["inline-asm"] }
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
buddy_system_allocator = "0.8"
spin = "0.7"
bitflags = "1.3"
xmas-elf = "0.7.0"
virtio-drivers = { path = "../virtio-drivers" }
k210-pac = { path = "../k210-pac" }
k210-hal = { path = "../k210-hal" }
k210-soc = { path = "../k210-soc" }
simple-fat32 = { path = "../simple_fat32" }
embedded-hal = "=1.0.0-alpha.7"
nb = "1.0"
log = "0.4"
num_enum = { version="0.5", default-features = false }

[features]
board_qemu = []
board_k210 = []
comp = ["board_k210"]

[profile.dev]
opt-level = 1
debug = true
debug-assertions = false
overflow-checks = false
lto = false
panic = 'unwind'
incremental = false
codegen-units = 16
rpath = false
